--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
         <div class="row">
             <div class="box">
                 <div class="col-lg-12 text-center">
-                    <h1 class="brand-name">השאירו פרטים</h1>
+                    <h1 class="brand-name">קבוצת קומיקאים הייטקסיטים</h1>
                     <hr class="tagline-divider">
                     <h2>
-                        <strong>והכיף יגיע אליכם</strong>
+                        <strong><a href="https://www.youtube.com/channel/UCU2kbCBfUclO0RUBLAWoKJA" target="_blank">מערכונים מאולתרים עם הקהל</a></strong>
                     </h2>
                 </div>
             </div>
@@ -55,6 +55,9 @@
         <div class="row">
             <div class="box">
                 <div class="col-lg-12">
+                	<h1 class="text-center">הרשמו כדי לקבל עדכונים
+  </h1>
+<h2 class="text-center">(מבטיחים בלי ספאם)</h2>
                     <hr>
                     <h2 class="intro-text text-center">
                         <div id="mc_embed_signup" style="text-align: center;">
