--- a/index.html
+++ b/index.html
@@ -1,116 +1,255 @@
-﻿<!DOCTYPE html>
+<!doctype html>
+<!--
+  Material Design Lite
+  Copyright 2015 Google Inc. All rights reserved.
+
+  Licensed under the Apache License, Version 2.0 (the "License");
+  you may not use this file except in compliance with the License.
+  You may obtain a copy of the License at
+
+      https://www.apache.org/licenses/LICENSE-2.0
+
+  Unless required by applicable law or agreed to in writing, software
+  distributed under the License is distributed on an "AS IS" BASIS,
+  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+  See the License for the specific language governing permissions and
+  limitations under the License
+-->
 <html lang="en">
-
 <head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="description" content="A front-end template that helps you build fast, modern mobile web apps.">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>שירלי והפחיות - מופע מערכונים מאולתרים</title>
 
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <!-- Add to homescreen for Chrome on Android -->
+  <meta name="mobile-web-app-capable" content="yes">
+  <link rel="icon" sizes="192x192" href="images/touch/chrome-touch-icon-192x192.png">
 
-    <title>שירלי והפחיות</title>
+  <!-- Add to homescreen for Safari on iOS -->
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="Material Design Lite">
+  <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
 
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+  <!-- Tile icon for Win8 (144x144 + tile color) -->
+  <meta name="msapplication-TileImage" content="images/touch/ms-touch-icon-144x144-precomposed.png">
+  <meta name="msapplication-TileColor" content="#3372DF">
 
-    <!-- Custom CSS -->
-    <link href="css/business-casual.css" rel="stylesheet">
+  <!-- SEO: If your mobile URL is different from the desktop URL, add a canonical link to the desktop page https://developers.google.com/webmasters/smartphone-sites/feature-phones -->
+  <!--
+  <link rel="canonical" href="http://www.example.com/">
+  -->
 
-    <!-- Fonts -->
-    <link href="http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Josefin+Slab:100,300,400,600,700,100italic,300italic,400italic,600italic,700italic" rel="stylesheet" type="text/css">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
+  <link
+      href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en"
+      rel="stylesheet">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="css//material.min.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <style>
+    #view-source {
+      position: fixed;
+      display: block;
+      right: 0;
+      bottom: 0;
+      margin-right: 40px;
+      margin-bottom: 40px;
+      z-index: 900;
+    }
+  </style>
 </head>
-
 <body>
-	<div class="container">
-		<div class="row">
-			<div class="box">
-				<div class="col-lg-12 text-center">
-					<img class="img-responsive  center-block" src="img/logo.png" alt="">
-				</div>
-			</div>
-		</div>
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&version=v2.4&appId=178193622234439";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 
-        <div class="row">
-            <div class="box">
-                <div class="col-lg-12 text-center">
-                    <h1 class="brand-name">קבוצת קומיקאים הייטקסיטים</h1>
-                    <hr class="tagline-divider">
-                    <h2>
-                        <strong><a href="https://www.youtube.com/channel/UCU2kbCBfUclO0RUBLAWoKJA" target="_blank">מערכונים מאולתרים עם הקהל</a></strong>
-                    </h2>
-                </div>
+<div  class="demo-blog mdl-layout mdl-js-layout has-drawer is-upgraded">
+  <main class="mdl-layout__content">
+
+    <div class="demo-blog__posts mdl-grid" dir="rtl">
+      <div class="mdl-card shirley-top mdl-cell mdl-cell--12-col">
+        <div class="mdl-card__media mdl-color-text--grey-50">
+          <div class="g-ytsubscribe" data-channel="shirleyandthecans" data-layout="default" data-count="default"></div>
+          &nbsp;&nbsp;
+          <div class="fb-like" data-href="https://www.facebook.com/shirleyandthecans" data-layout="button_count" data-action="like" data-show-faces="true" data-share="false"></div>
+        </div>
+      </div>
+
+
+      <div class="mdl-card coffee-pic mdl-cell mdl-cell--8-col mdl-cell--12-col-phone mdl-cell--12-col-tablet">
+        <div class="">
+          <div class="mdl-card__title">
+            <h3>קטעים מתוך אליפות הארץ:</h3>
+          </div>
+          <div class="mdl-color--white mdl-card__supporting-text">
+            <iframe width="560" height="315"
+                    src="https://www.youtube-nocookie.com/embed/videoseries?list=PLYoRRVlFq-h64stTBckAe9AO0Yk1OR--3"
+                    frameborder="0" allowfullscreen></iframe>
+
+          </div>
+        </div>
+      </div>
+      <div class="mdl-card discount mdl-cell mdl-cell--4-col mdl-cell--12-col-phone mdl-cell--12-col-tablet">
+        <div class="">
+
+          <div class="mdl-card__title">
+            <h3>רוצים הנחה?</h3>
+          </div>
+          <div class="mdl-card__supporting-text mdl-grid mdl-color--white">
+            <div class="mdl-cell mdl-cell--11-col">
+              <p>מבטיחים בלי ספאם! (נגענו באדום שורף)</p>
+
+              <p>הצטרפו לרשימה שלנו וקבלו קוד הנחה למייל.
+                <b>הקוד תקף רק בהזמנה טלפונית!</b></p>
+
+            </div>
+            <div id="mc_embed_signup" class="mdl-cell mdl-cell--11-col">
+              <form action="//rinastudio.us10.list-manage.com/subscribe/post?u=8d79434fe96292a59dee1a524&amp;id=5a5fe75a39" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <div id="mc_embed_signup_scroll">
+              <div class="mc-field-group">
+                <label for="mce-FNAME">שם מלא </label>
+                <input type="text" value="" name="FNAME" class="" id="mce-FNAME">
+              </div>
+              <div class="mc-field-group">
+                <label for="mce-EMAIL">כתובת מייל
+                </label>
+                <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+
+
+              </div>
+              <div id="mce-responses" class="clear">
+                <div class="response" id="mce-error-response" style="display:none"></div>
+                <div class="response" id="mce-success-response" style="display:none"></div>
+              </div>
+              <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+              <div style="position: absolute; left: -5000px;"><input type="text"
+                                                                     name="b_8d79434fe96292a59dee1a524_5a5fe75a39"
+                                                                     tabindex="-1" value=""></div>
+              <div >
+                <br/>
+                <input type="submit" value="צרפו אותי ופנקו בהנחה" name="subscribe"
+                       id="mc-embedded-subscribe"
+                       class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored subscribe-btn mdl-js-ripple-effect">
+              </div>
+            </div>
+            </form>
+          </div>
+            <div class="mdl-cell mdl-cell--11-col warranty">
+              *מבטיחים לעדכן רק על מופעים חדשים שלנו. כתובת המייל שלכם לעולם לא תימסר לאף אחד אחר.
             </div>
         </div>
-
-        <div class="row">
-            <div class="box">
-                <div class="col-lg-12">
-                	<h1 class="text-center">הרשמו כדי לקבל עדכונים
-  </h1>
-<h2 class="text-center">(מבטיחים בלי ספאם)</h2>
-                    <hr>
-                    <h2 class="intro-text text-center">
-                        <div id="mc_embed_signup" style="text-align: center;">
-<form action="//rinastudio.us10.list-manage.com/subscribe/post?u=8d79434fe96292a59dee1a524&amp;id=5a5fe75a39" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-    <div id="mc_embed_signup_scroll">
-
-<div class="mc-field-group">
-<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
-	<label for="mce-EMAIL">כתובת מייל  <span class="asterisk">*</span>
-</label>
-	
-</div>
-	<div id="mce-responses" class="clear">
-		<div class="response" id="mce-error-response" style="display:none"></div>
-		<div class="response" id="mce-success-response" style="display:none"></div>
-	</div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-    <div style="position: absolute; left: -5000px;"><input type="text" name="b_8d79434fe96292a59dee1a524_5a5fe75a39" tabindex="-1" value=""></div>
-    <div class="clear"><input type="submit" value="שירלי בום" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+      </div>
     </div>
-</form>
+
+
+      <div class="mdl-card on-the-road-again mdl-cell mdl-cell--12-col">
+
+      <div class="mdl-card__media">
+        <h2>אז מה זה המופע הזה בכלל?</h2>
+      </div>
+      <div class="about">
+
+        <p>
+          שירלי והפחיות הם זוהר זקס, שי רזניק ועידו וירון,  שלושה אנשי הייטק שזכו בתואר "אלופי ישראל באילתור"  שנתיים ברציפות.
+        </p>
+
+        <h4>
+          מה זה מופעי אילתור אתם שואלים?
+        </h4>
+        </p>
+
+        <p>
+          מופע שבו המופיעים לא יודעים מה הם הולכים לבצע מראש וביחד עם הקהל הם יוצרים על הבמה מערכונים
+          הצגות שלמות או סתם משחקים סטייל של "מי השורה הזאת בכלל".
+        </p>
+        <p>
+          להיות פעם ראשונה במופע אימפרו טוב זאת חוויה,
+          מצד אחד אתה לא מפסיק לצחוק, מצד שני אתה בהלם ממה שקורה לך מול העיניים.
+          <br/>
+          קשה בהתחלה להאמין ששום דבר לא כתוב מראש והכל מאולתר מעכשיו לעכשיו
+          וזאת בעצם הגדולה של מופע אילתור איכותי.
+        </p>
+
+        <p>
+        <h4>
+          "עמק השירליקון"
+        </h4>
+        </p>
+
+        <p>
+          זהר זקס, ארכיטקט תוכנה באמדוקס, שי  רזניק, סטארטאפיסט ויועץ ווב, ועידו וירון, מוביל טכנולוגי בארגון צופן.
+          שלושתם חיים וצוחקים הייטק כבר הרבה שנים, ובגלל זה הם החליטו להתחיל לצחוק קצת על המציאות היומיומית ההייטקיסטית.
+        </p>
+
+        <p>
+          המופע מיועד להייטקיסטיות ובני זוגם, סטארטפיסטים ובנות זוגם, אנשי HR, מלצריות באיזורי תעשיה, אנשי סרבר, אנשי קליינט, אלגוריתמיקאים, מוכרי קרטיבים ובנות זוגם, מטרידי תרנגולות, נשות תחזוקה, מפעילי מזלט"ים, ירקנים, וכל מי שמחזיק תן ביס או סיבוס או שלא מחזיק אף אחד מהם גם יחד...
+        </p>
+
+        <p>
+          המופע הקרוב -  <br/>
+          3/9/15 <br/>
+          21:00 <br/>
+          תיאטרון גבעתיים
+          </p>
+        <p>
+          <h4>להזמנת כרטיסים - </h4>
+          03-7325340 <br/>
+          03-7325339 <br/>
+        או
+        <a href="http://www.t-g.co.il/main/siteNew/index.php?page=2&action=dispSt&stId=6474">בדף האירוע של התיאטרון</a>
+
+        </p>
+
+      </div>
+
+    </div>
+
+  </main>
+<div class="mdl-layout__obfuscator"></div>
 </div>
-                    </h2>
-                    <hr>
-                    <!-- Begin MailChimp Signup Form -->
-
-
+<script src="js/material.min.js"></script>
+<script src="https://apis.google.com/js/platform.js"></script>
+<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script><script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[1]='FNAME';ftypes[1]='text';fnames[0]='EMAIL';ftypes[0]='email'; /*
+ * Translated default messages for the $ validation plugin.
+ * Locale: HE
+ */
+  $.extend($.validator.messages, {
+    required: ".השדה הזה הינו שדה חובה",
+    remote: "נא לתקן שדה זה.",
+    email: "נא למלא כתובת דוא\"ל חוקית",
+    url: "נא למלא כתובת אינטרנט חוקית.",
+    date: "נא למלא תאריך חוקי",
+    dateISO: "נא למלא תאריך חוקי (ISO).",
+    number: "נא למלא מספר.",
+    digits: ".נא למלא רק מספרים",
+    creditcard: "נא למלא מספר כרטיס אשראי חוקי.",
+    equalTo: "נא למלא את אותו ערך שוב.",
+    accept: "נא למלא ערך עם סיומת חוקית.",
+    maxlength: $.validator.format(".נא לא למלא יותר מ- {0} תווים"),
+    minlength: $.validator.format("נא למלא לפחות {0} תווים."),
+    rangelength: $.validator.format("נא למלא ערך בין {0} ל- {1} תווים."),
+    range: $.validator.format("נא למלא ערך בין {0} ל- {1}."),
+    max: $.validator.format("נא למלא ערך קטן או שווה ל- {0}."),
+    min: $.validator.format("נא למלא ערך גדול או שווה ל- {0}.")
+  });}(jQuery));var $mcj = jQuery.noConflict(true);</script>
 <!--End mc_embed_signup-->
-                    <hr class="visible-xs">
-                    
-                </div>
-            </div>
-        </div>
-
-    </div>
-    <!-- /.container -->
-
-    <footer>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <p>שירלי והפחיות.יש לעיין בעלון לצרכן לפני השימוש. לשימוש חיצוני בלבד. אינו מכיל טטרזין</p>
-                </div>
-            </div>
-        </div>
-    </footer>
-
-    <!-- jQuery -->
-    <script src="js/jquery.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
-
 
 </body>
 
 </html>
+
+<!-- Begin MailChimp Signup Form -->
+<link href="//cdn-images.mailchimp.com/embedcode/classic-081711.css" rel="stylesheet" type="text/css">
+<style type="text/css">
+  #mc_embed_signup{background:#fff; clear:left; font:14px Helvetica,Arial,sans-serif; }
+  /* Add your own MailChimp form style overrides in your site stylesheet or in this style block.
+     We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+</style>
+
