--- a/index.html
+++ b/index.html
@@ -86,13 +86,12 @@
       <div class="mdl-card coffee-pic mdl-cell mdl-cell--8-col mdl-cell--12-col-phone mdl-cell--12-col-tablet">
         <div class="">
           <div class="mdl-card__title">
-            <h3>קטעים מתוך אליפות הארץ:</h3>
+            <h3>קטעים מהמופע האחרון</h3>
           </div>
           <div class="mdl-color--white mdl-card__supporting-text">
             <iframe width="560" height="315"
-                    src="https://www.youtube-nocookie.com/embed/videoseries?list=PLYoRRVlFq-h64stTBckAe9AO0Yk1OR--3"
+                    src="https://www.youtube-nocookie.com/embed/videoseries?list=PLYoRRVlFq-h5YJ997xRklqL64RKwpHloP"
                     frameborder="0" allowfullscreen></iframe>
-
           </div>
         </div>
       </div>
@@ -192,9 +191,9 @@
           המופע מיועד להייטקיסטיות ובני זוגם, סטארטפיסטים ובנות זוגם, אנשי HR, מלצריות באיזורי תעשיה, אנשי סרבר, אנשי קליינט, אלגוריתמיקאים, מוכרי קרטיבים ובנות זוגם, מטרידי תרנגולות, נשות תחזוקה, מפעילי מזלט"ים, ירקנים, וכל מי שמחזיק תן ביס או סיבוס או שלא מחזיק אף אחד מהם גם יחד...
         </p>
 
-     <!--   <p>
+        <p>
           המופע הקרוב -  <br/>
-          3/9/15 <br/>
+          28/1/16 <br/>
           21:00 <br/>
           תיאטרון גבעתיים
           </p>
@@ -203,10 +202,10 @@
           03-7325340 <br/>
           03-7325339 <br/>
         או
-        <a href="http://www.t-g.co.il/main/siteNew/index.php?page=2&action=dispSt&stId=6474">בדף האירוע של התיאטרון</a>
+        <a href="http://www.t-g.co.il/main/siteNew/index.php?page=2&action=dispSt&stId=6641">בדף האירוע של התיאטרון</a>
 
         </p>
--->
+
       </div>
 
     </div>
