--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
       <div class="about">
 
         <p>
-          שירלי והפחיות הם זוהר זקס, שי רזניק ועידו וירון,  שלושה אנשי הייטק שזכו בתואר "אלופי ישראל באילתור"  שנתיים ברציפות.
+          שירלי והפחיות הם זהר זקס, שי רזניק ועידו וירון,  שלושה אנשי הייטק שזכו בתואר "אלופי ישראל באילתור"  שנתיים ברציפות.
         </p>
 
         <h4>
@@ -203,6 +203,7 @@
           03-7325339 <br/>
         או
         <a href="http://www.t-g.co.il/main/siteNew/index.php?page=2&action=dispSt&stId=6641">בדף האירוע של התיאטרון</a>
+        (קוד ההנחה תקף רק בהזמנה טלפונית)
 
         </p>
 
