--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
       <div class="mdl-card coffee-pic mdl-cell mdl-cell--8-col mdl-cell--12-col-phone mdl-cell--12-col-tablet">
         <div class="">
           <div class="mdl-card__title">
-            <h3>קטעים מהמופע האחרון</h3>
+            <h3>קטעים מהמופעים הקודמים/h3>
           </div>
           <div class="mdl-color--white mdl-card__supporting-text">
             <iframe width="560" height="315" 
