--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
           המופע מיועד להייטקיסטיות ובני זוגם, סטארטפיסטים ובנות זוגם, אנשי HR, מלצריות באיזורי תעשיה, אנשי סרבר, אנשי קליינט, אלגוריתמיקאים, מוכרי קרטיבים ובנות זוגם, מטרידי תרנגולות, נשות תחזוקה, מפעילי מזלט"ים, ירקנים, וכל מי שמחזיק תן ביס או סיבוס או שלא מחזיק אף אחד מהם גם יחד...
         </p>
 
-       <p>
+      <!--  <p>
           המופע הקרוב -  <br/>
           31/3/16 <br/>
           21:00 <br/>
@@ -206,10 +206,10 @@
         (קוד ההנחה תקף רק בהזמנה טלפונית)
 
         </p>
-
-
-<!-- 
 -->
+
+<!-- opening comment
+closing comment -->
       </div>
 
     </div>
