--- a/index.html
+++ b/index.html
@@ -193,17 +193,14 @@
 
       <!--  <p>
           המופע הקרוב -  <br/>
-          31/3/16 <br/>
-          21:00 <br/>
-          תיאטרון גבעתיים
+          06/8/16 <br/>
+          20:30 <br/>
+          צוותא 2
           </p>
         <p>
           <h4>להזמנת כרטיסים - </h4>
-          03-7325340 <br/>
-          03-7325339 <br/>
-        או
-        <a href="http://www.t-g.co.il/main/siteNew/index.php?page=2&action=dispSt&stId=6740">בדף האירוע של התיאטרון</a>
-        (קוד ההנחה תקף רק בהזמנה טלפונית)
+          http://bit.ly/shirleyEv-0608 <br/>
+
 
         </p>
 -->
