--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@
 
        <p>
           המופע הקרוב -  <br/>
-          06/8/16 <br/>
+          06/8/16 שבת <br/>
           20:30 <br/>
-          צוותא 2
+          צוותא 2, תל אביב
           </p>
         <p>
           <h4>להזמנת כרטיסים - </h4>
