--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
               <p>מבטיחים בלי ספאם! (נגענו באדום שורף)</p>
 
               <p>הצטרפו לרשימה שלנו וקבלו קוד הנחה למייל.
-                <b>הקוד תקף רק בהזמנה טלפונית!</b></p>
+                <b>/b></p>
 
             </div>
             <div id="mc_embed_signup" class="mdl-cell mdl-cell--11-col">
@@ -191,7 +191,7 @@
           המופע מיועד להייטקיסטיות ובני זוגם, סטארטפיסטים ובנות זוגם, אנשי HR, מלצריות באיזורי תעשיה, אנשי סרבר, אנשי קליינט, אלגוריתמיקאים, מוכרי קרטיבים ובנות זוגם, מטרידי תרנגולות, נשות תחזוקה, מפעילי מזלט"ים, ירקנים, וכל מי שמחזיק תן ביס או סיבוס או שלא מחזיק אף אחד מהם גם יחד...
         </p>
 
-      <!-- <p>
+      <p>
           המופע הקרוב -  <br/>
           06/8/16 שבת <br/>
           20:30 <br/>
@@ -199,12 +199,13 @@
           </p>
         <p>
           <h4>להזמנת כרטיסים - </h4>
-          http://bit.ly/shirleyEv-0608  <br/>
+          <a href="http://bit.ly/shirleyEv-0608">http://bit.ly/shirleyEv-0608
+</a>  <br/>
 
 
         </p>
 
--->
+
 <!-- opening comment
 closing comment -->
       </div>
