--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
           </p>
         <p>
           <h4>להזמנת כרטיסים - </h4>
-          <a href="http://bit.ly/shirleyEv-0608">http://bit.ly/shirleyEv-0608
+          <a href="http://bit.ly/shirleyHome-0608"> http://bit.ly/shirleyHome-0608
 </a>  <br/>
 
 
