--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         </p>
 
       <p>
-          המופע הקרוב -  <br/>
+         <!-- המופע הקרוב -  <br/>
           06/8/16 שבת <br/>
           20:30 <br/>
           צוותא 2, תל אביב
@@ -200,7 +200,7 @@
         <p>
           <h4>להזמנת כרטיסים - </h4>
           <a href="http://bit.ly/shirleyHome-0608"> http://bit.ly/shirleyHome-0608
-</a>  <br/>
+</a>  <br/> -->
 
 
         </p>
