--- a/index.html
+++ b/index.html
@@ -192,6 +192,8 @@
         </p>
 
       <p>
+        
+        המופע הקרוב
         <!-- PASTE COMMENT BELOW THIS LINE --> 
         <!--
           המופע הקרוב -  <br/>
