--- a/index.html
+++ b/index.html
@@ -194,17 +194,17 @@
       <p>
         
         <!-- PASTE COMMENT BELOW THIS LINE --> 
-        <!--
+        
           המופע הקרוב -  <br/>
-          06/8/16 שבת <br/>
+          28/1/17 שבת <br/>
           20:30 <br/>
           צוותא 2, תל אביב
           </p>
         <p>
           <h4>להזמנת כרטיסים - </h4>
-          <a href="http://bit.ly/shirleyHome-0608"> http://bit.ly/shirleyHome-0608
+          <a href="http://bit.ly/ShirleyHome-2701"> http://bit.ly/ShirleyHome-2701
 </a>  <br/>
---> 
+
         <!-- PASTE ENDING COMMENT ABOVE THIS LINE --> 
 
         </p>
