--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
           </p>
         <p>
           <h4>להזמנת כרטיסים - </h4>
-          <a href="http://bit.ly/ShirleyHome-2801"> http://bit.ly/ShirleyHome-2801
+          <a href="http://bit.ly/ShirleyHomep-2801"> http://bit.ly/ShirleyHomep-2801
 </a>  <br/>
 
         <!-- PASTE ENDING COMMENT ABOVE THIS LINE --> 
