--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
       <p>
         
-        <!-- PASTE COMMENT BELOW THIS LINE --> 
+        <!-- PASTE COMMENT BELOW THIS LINE  
         
           המופע הקרוב -  <br/>
           28/1/17 שבת <br/>
