--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
           <a href="http://bit.ly/ShirleyHomep-2801"> http://bit.ly/ShirleyHomep-2801
 </a>  <br/>
 
-        <!-- PASTE ENDING COMMENT ABOVE THIS LINE --> 
+         PASTE ENDING COMMENT ABOVE THIS LINE --> 
 
         </p>
 
